@@ -1,6 +1,9 @@
+2009-02-05 Maximilien Cuony
+    * Gmail working again
+
 2009-02-02 Maximilien Cuony
     * Fix problem with mails sended by claws mail, kmail, Mutt
-    
+
 2009-02-01 Maximilien Cuony
     * FS#225
     * FS#224
